--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portifólio Pessoal</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 <body>
-  Gustavo
+  <header class="header">
+    <img src="./img/marcaMarca.svg" alt="logo">
+    <nav>
+      <ul class="header-menu">
+        <li><a href="#experiencia">Experiência</a></li>
+        <li><a href="#formacao">Formação</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
