--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
       </ul>
     </nav>
   </header>
+  <main class="introducao">
+    <img src="./img/fotootimizada.jpg" alt="Foto de Perfil">
+    <div>
+      <h1>Desenvolvedor<br> Full Stack & <br>UX/UI Designer </h1>
+      <p>Localizado em Porto Velho 📍</p>
+    </div>
+  </main>
 </body>
 </html>
