--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
+
 <body>
   <header class="header">
     <img src="./img/marcaMarca.svg" alt="logo">
@@ -25,5 +27,31 @@
       <p>Localizado em Porto Velho 📍</p>
     </div>
   </main>
+  <section aria-label="Experiência" class="experiencia" id="experiencia">
+    <h2 class="subtitulo">Experiência</h2>
+    <div>
+      <p class="experiencia-texto">
+        Desenvolvo pequenos projetos como o BikCraft
+        utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>Javascript</strong>. Para
+        aplicativos web como a rede social Dogs eu
+        trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.
+      </p>
+      <div class="empresa">
+        <span class="empresa-ano">2024</span>
+        <h3 class="empresa-titulo">Sistema de Cotação</h3>
+        <span class="empresa-titulo">Tecnologias</span>
+        <p class="empresa-texto">Projeto que foi desenvolvido para uma solução que permite ao gestor de compras realizar
+          a solicitação de um produto com diversas empresas em uma mesma plataforma.</p>
+      </div>
+      <ul class="empresa-habilidade">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>TYPESCRIPT</li>
+        <li>REACT.JS</li>
+        <li>NEXT.JS</li>
+      </ul>
+    </div>
+  </section>
 </body>
+
 </html>
