--- a/index.html
+++ b/index.html
@@ -51,6 +51,34 @@
         <li>NEXT.JS</li>
       </ul>
     </div>
+      <div class="empresa">
+        <span class="empresa-ano">2024</span>
+        <h3 class="empresa-titulo">Rede Social Dogs</h3>
+        <span class="empresa-titulo">Tecnologias</span>
+        <p class="empresa-texto">Projeto de uma rede social de cachorros com 
+          o objetivo de que eles interajam.</p>
+      </div>
+      <ul class="empresa-habilidade">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>TYPESCRIPT</li>
+        <li>REACT.JS</li>
+        <li>NEXT.JS</li>
+      </ul>
+    </div>
+      <div class="empresa">
+        <span class="empresa-ano">2023</span>
+        <h3 class="empresa-titulo">To-Do List</h3>
+        <span class="empresa-titulo">Tecnologias</span>
+        <p class="empresa-texto">Projeto desenvolvido para adicionar, concluir e
+          excluir tarefas.</p>
+      </div>
+      <ul class="empresa-habilidade">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JAVASCRIPT</li>
+      </ul>
+    </div>
   </section>
 </body>
 
