--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portifólio Pessoal</title>
+  <title>Lobo - Desenvolvedor e Designer</title>
   <link rel="stylesheet" href="./styles/style.css">
-  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 
 <body>
   <header class="header">
-    <img src="./img/marcaMarca.svg" alt="logo">
+    <img src="./img/marcaMarca.svg" alt="Logo">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -20,66 +19,62 @@
       </ul>
     </nav>
   </header>
+
   <main class="introducao">
-    <img src="./img/fotootimizada.jpg" alt="Foto de Perfil">
+    <img src="./img/fotootimizada.jpg" alt="foto de perfil">
     <div>
-      <h1>Desenvolvedor<br> Full Stack & <br>UX/UI Designer </h1>
+      <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
       <p>Localizado em Porto Velho 📍</p>
     </div>
   </main>
-  <section aria-label="Experiência" class="experiencia" id="experiencia">
+
+  <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">
-        Desenvolvo pequenos projetos como o BikCraft
-        utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>Javascript</strong>. Para
-        aplicativos web como a rede social Dogs eu
-        trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.
-      </p>
+      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+
       <div class="empresa">
-        <span class="empresa-ano">2024</span>
-        <h3 class="empresa-titulo">Sistema de Cotação</h3>
-        <span class="empresa-titulo">Tecnologias</span>
-        <p class="empresa-texto">Projeto que foi desenvolvido para uma solução que permite ao gestor de compras realizar
-          a solicitação de um produto com diversas empresas em uma mesma plataforma.</p>
+        <span class="empresa-ano">2045</span>
+        <h3 class="empresa-titulo">Bikcraft</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
       </div>
-      <ul class="empresa-habilidade">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>TYPESCRIPT</li>
-        <li>REACT.JS</li>
-        <li>NEXT.JS</li>
-      </ul>
-    </div>
+
       <div class="empresa">
-        <span class="empresa-ano">2024</span>
-        <h3 class="empresa-titulo">Rede Social Dogs</h3>
-        <span class="empresa-titulo">Tecnologias</span>
-        <p class="empresa-texto">Projeto de uma rede social de cachorros com 
-          o objetivo de que eles interajam.</p>
+        <span class="empresa-ano">2044-45</span>
+        <h3 class="empresa-titulo">Surfbot</h3>
+        <span class="empresa-titulo">Estagiário</span>
+        <p class="empresa-texto">Surfbot é uma empresa que oferece aulas de surf no Rio de Janeiro. O projeto foi feito com HTML, CSS e JavaScript. Todo o projeto foi feito do zero.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
       </div>
-      <ul class="empresa-habilidade">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>TYPESCRIPT</li>
-        <li>REACT.JS</li>
-        <li>NEXT.JS</li>
-      </ul>
-    </div>
+
       <div class="empresa">
-        <span class="empresa-ano">2023</span>
-        <h3 class="empresa-titulo">To-Do List</h3>
-        <span class="empresa-titulo">Tecnologias</span>
-        <p class="empresa-texto">Projeto desenvolvido para adicionar, concluir e
-          excluir tarefas.</p>
+        <span class="empresa-ano">2044</span>
+        <h3 class="empresa-titulo">Brafé</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">Mais de 3 projetos foram desenvolvidos para a empresa Brafé. Eu trabalhei na criação do email marketing e também no HTML.</p>
+        <ul class="empresa-habilidades">
+          <li>Email Marketing</li>
+          <li>HTML</li>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
       </div>
-      <ul class="empresa-habilidade">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JAVASCRIPT</li>
-      </ul>
+
     </div>
   </section>
+
 </body>
 
 </html>
