add training content

--- a/index.html
+++ b/index.html
@@ -74,7 +74,61 @@
 
     </div>
   </section>
-
+  <section class="formacao" id="formacao" aria-label="formacao">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+      <div>
+        <p class="formacao-texto">
+          Minha experiência acadêmica recente
+          foi o começo na faculdade no curso
+          <strong>Sistemas de Informação</strong> - UNIRON 🎓
+        </p>
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Bacharel</span>
+            <h3 class="faculdade-curso">Sistemas de <br>Informação</h3>
+            <span class="faculdade-instituicao">UNIRON</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Curso
+            </span>
+            <h3 class="faculdade-curso">UX Design & <br>
+              UI Design</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Curso</span>
+            <h3 class="faculdade-curso">Front End & <br> Web Designer</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
+          </li>
+        </ul>
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>
+                React <span>11h</span>
+              </li>
+              <li>
+                Next.js <span>11h</span>
+              </li>
+              <li>
+                Typescript <span>5h</span>
+              </li>
+            </ul>
+          </div>
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>
+                Inglês <span>/ Básico</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
