add footer and styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <img src="./img/marcaMarca.svg" alt="Logo">
+    <img src="./img/marca.svg" alt="Lobo">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -21,10 +21,10 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/fotootimizada.jpg" alt="foto de perfil">
+    <img src="./img/perfil.jpg" alt="Lobo Cinza">
     <div>
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-      <p>Localizado em Porto Velho 📍</p>
+      <p>Localizado no Rio de Janeiro 🏖</p>
     </div>
   </main>
 
@@ -74,61 +74,66 @@
 
     </div>
   </section>
-  <section class="formacao" id="formacao" aria-label="formacao">
+
+  <section class="formacao" id="formacao" aria-label="Formação">
     <div class="formacao-container">
       <h2 class="subtitulo">Formação</h2>
+
       <div>
         <p class="formacao-texto">
-          Minha experiência acadêmica recente
-          foi o começo na faculdade no curso
-          <strong>Sistemas de Informação</strong> - UNIRON 🎓
+          Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
         </p>
+
         <ul class="faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Sistemas de <br>Informação</h3>
-            <span class="faculdade-instituicao">UNIRON</span>
+            <h3 class="faculdade-curso">Administração de Empresas</h3>
+            <span class="faculdade-instituicao">UFRRJ</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">Curso
-            </span>
-            <h3 class="faculdade-curso">UX Design & <br>
-              UI Design</h3>
-            <span class="faculdade-instituicao">ORIGAMID</span>
+            <span class="faculdade-tipo">Tecnólogo</span>
+            <h3 class="faculdade-curso">Design Digital</h3>
+            <span class="faculdade-instituicao">Infnet</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">Curso</span>
-            <h3 class="faculdade-curso">Front End & <br> Web Designer</h3>
-            <span class="faculdade-instituicao">ORIGAMID</span>
+            <span class="faculdade-tipo">Mestre</span>
+            <h3 class="faculdade-curso">User Experience Design</h3>
+            <span class="faculdade-instituicao">UCLL</span>
           </li>
         </ul>
+
         <div class="formacao-extra">
           <div class="cursos">
             <h3>Cursos Intensivos</h3>
             <ul>
-              <li>
-                React <span>11h</span>
-              </li>
-              <li>
-                Next.js <span>11h</span>
-              </li>
-              <li>
-                Typescript <span>5h</span>
-              </li>
+              <li>UX Design & UI Design <span>56h</span></li>
+              <li>Front End para Iniciantes <span>72h</span></li>
             </ul>
           </div>
           <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
-              <li>
-                Inglês <span>/ Básico</span>
-              </li>
+              <li>Inglês <span>/ Fluente</span></li>
+              <li>Espanhol <span>/ Intermediário</span></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <footer class="footer" id="contato">
+    <div class="footer-container">
+      <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
+      <ul class="footer-contato">
+        <li>lobo@email.com</li>
+        <li>+55 21 9999-9999</li>
+        <li><a href="/">@instagram</a></li>
+      </ul>
+      <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
