--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lobo - Desenvolvedor e Designer</title>
+  <title>Mendes - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
   <header class="header">
-    <img src="./img/marca.svg" alt="Lobo" width="104" height="38">
+    <img src="./img/marcaMarca.svg" alt="Logo" width="104" height="38">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -22,10 +22,10 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
+    <img src="./img/fotootimizada.jpg" alt="Foto de perfil" width="360" height="520">
     <div>
-      <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-      <p>Localizado no Rio de Janeiro 🏖</p>
+      <h1>Desenvolvedor<br>Full Stack &<br>UX/UI Designer</h1>
+      <p>Localizado em Porto Velho📍</p>
     </div>
   </main>
 
@@ -35,41 +35,47 @@
       <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
       <div class="empresa">
-        <span class="empresa-ano">2045</span>
-        <h3 class="empresa-titulo">Bikcraft</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+        <span class="empresa-ano">2024</span>
+        <h3 class="empresa-titulo">Sistema de Cotação</h3>
+        <span class="empresa-titulo">Tecnologias</span>
+        <p class="empresa-texto">
+          Projeto que foi desenvolvido para uma solução que permite ao gestor de compras realizar
+          a solicitação de um produto com diversas empresas em uma mesma plataforma.
+        </p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
-          <li>JavaScript</li>
-          <li>UX Design</li>
-          <li>UI Design</li>
+          <li>Typescript</li>
+          <li>React</li>
+          <li>Next.js</li>
         </ul>
       </div>
 
       <div class="empresa">
-        <span class="empresa-ano">2044-45</span>
-        <h3 class="empresa-titulo">Surfbot</h3>
-        <span class="empresa-titulo">Estagiário</span>
-        <p class="empresa-texto">Surfbot é uma empresa que oferece aulas de surf no Rio de Janeiro. O projeto foi feito com HTML, CSS e JavaScript. Todo o projeto foi feito do zero.</p>
+        <span class="empresa-ano">2024</span>
+        <h3 class="empresa-titulo">Rede Social Dogs</h3>
+        <span class="empresa-titulo">Tecnologias</span>
+        <p class="empresa-texto">Projeto de uma rede social de cachorros com
+          o objetivo de que eles interajam.</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
-          <li>JavaScript</li>
+          <li>Typescript</li>
+          <li>React</li>
+          <li>Next.js</li>
         </ul>
       </div>
 
       <div class="empresa">
-        <span class="empresa-ano">2044</span>
-        <h3 class="empresa-titulo">Brafé</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">Mais de 3 projetos foram desenvolvidos para a empresa Brafé. Eu trabalhei na criação do email marketing e também no HTML.</p>
+        <span class="empresa-ano">2023</span>
+        <h3 class="empresa-titulo">To-Do List</h3>
+        <span class="empresa-titulo">Tecnologias</span>
+        <p class="empresa-texto">Projeto desenvolvido para adicionar, concluir e
+          excluir tarefas.</p>
         <ul class="empresa-habilidades">
-          <li>Email Marketing</li>
           <li>HTML</li>
-          <li>UX Design</li>
-          <li>UI Design</li>
+          <li>CSS</li>
+          <li>Javascript</li>
         </ul>
       </div>
 
@@ -82,24 +88,26 @@
 
       <div>
         <p class="formacao-texto">
-          Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> 🎓 que fiz no exterior em <strong>UX Design</strong>. Além disso me mantenho sempre atualizado com cursos intensivos online.
+          Minha experiência acadêmica recente
+          foi o começo na faculdade no curso
+          <strong>Sistemas de Informação</strong> - UNIRON 🎓
         </p>
 
         <ul class="faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Administração de Empresas</h3>
-            <span class="faculdade-instituicao">UFRRJ</span>
+            <h3 class="faculdade-curso">Sistemas de Informação</h3>
+            <span class="faculdade-instituicao">UNIRON</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">Tecnólogo</span>
-            <h3 class="faculdade-curso">Design Digital</h3>
-            <span class="faculdade-instituicao">Infnet</span>
+            <span class="faculdade-tipo">Curso</span>
+            <h3 class="faculdade-curso">UX Design & /UI Design</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
           </li>
           <li class="faculdade">
-            <span class="faculdade-tipo">Mestre</span>
-            <h3 class="faculdade-curso">User Experience Design</h3>
-            <span class="faculdade-instituicao">UCLL</span>
+            <span class="faculdade-tipo">Curso</span>
+            <h3 class="faculdade-curso">Front End & Web Designer</h3>
+            <span class="faculdade-instituicao">ORIGAMID</span>
           </li>
         </ul>
 
@@ -107,15 +115,15 @@
           <div class="cursos">
             <h3>Cursos Intensivos</h3>
             <ul>
-              <li>UX Design & UI Design <span>56h</span></li>
-              <li>Front End para Iniciantes <span>72h</span></li>
+              <li>React <span>11h</span></li>
+              <li>Next.js <span>11h</span></li>
+              <li>Typescript <span>5h</span></li>
             </ul>
           </div>
           <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
-              <li>Inglês <span>/ Fluente</span></li>
-              <li>Espanhol <span>/ Intermediário</span></li>
+              <li>Inglês <span>/ Básico</span></li>
             </ul>
           </div>
         </div>
@@ -127,11 +135,11 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li>lobo@email.com</li>
-        <li>+55 21 9999-9999</li>
-        <li><a href="/">@instagram</a></li>
+        <li>gustavormendess@email.com</li>
+        <li>+55 47 9244-2004</li>
+        <li><a href="https://www.linkedin.com/in/gustavormendess/" target="_blank">Linkedin</a></li>
       </ul>
-      <p class="footer-copy">Lobo. Alguns direitos reservados.</p>
+      <p class="footer-copy">Mendes. Alguns direitos reservados.</p>
     </div>
   </footer>
 
