--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Mendes - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="icon" href="favicon.svg" type="image/x-icon">
 </head>
 
 <body>
