--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mendes - Desenvolvedor e Designer</title>
+  <title>Mendes - Desenvolvedor Full Stack e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="icon" href="favicon.svg" type="image/x-icon">
