--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+      <p class="experiencia-texto">Desenvolvo projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong>, <strong> Typescript</strong>,<strong> React</strong> e <strong> Next.js</strong>. Para aplicativos web como a rede social Dogs, eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
       <div class="empresa">
         <span class="empresa-ano">2024</span>
@@ -54,10 +54,9 @@
 
       <div class="empresa">
         <span class="empresa-ano">2024</span>
-        <h3 class="empresa-titulo">Rede Social Dogs</h3>
+        <h3 class="empresa-titulo">Bikcraft</h3>
         <span class="empresa-titulo">Tecnologias</span>
-        <p class="empresa-texto">Projeto de uma rede social de cachorros com
-          o objetivo de que eles interajam.</p>
+        <p class="empresa-texto">Projeto desenvolvido para uma loja de bicicletas.</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
@@ -68,11 +67,10 @@
       </div>
 
       <div class="empresa">
-        <span class="empresa-ano">2023</span>
-        <h3 class="empresa-titulo">To-Do List</h3>
+        <span class="empresa-ano">2024</span>
+        <h3 class="empresa-titulo">Calculadora IMC</h3>
         <span class="empresa-titulo">Tecnologias</span>
-        <p class="empresa-texto">Projeto desenvolvido para adicionar, concluir e
-          excluir tarefas.</p>
+        <p class="empresa-texto">Projeto desenvolvido para informar sobre a faixa de peso do indivíduo.</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
@@ -90,7 +88,7 @@
       <div>
         <p class="formacao-texto">
           Minha experiência acadêmica recente
-          foi o começo na faculdade no curso
+          foi o começo na faculdade no curso de
           <strong>Sistemas de Informação</strong> - UNIRON 🎓
         </p>
 
@@ -102,7 +100,7 @@
           </li>
           <li class="faculdade">
             <span class="faculdade-tipo">Curso</span>
-            <h3 class="faculdade-curso">UX Design & /UI Design</h3>
+            <h3 class="faculdade-curso">UX Design & UI Design</h3>
             <span class="faculdade-instituicao">ORIGAMID</span>
           </li>
           <li class="faculdade">
