--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mendes - Desenvolvedor Full Stack e Designer</title>
+  <title>Gustavo - Desenvolvedor Full Stack e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer localizado no Rio de Janeiro">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="icon" href="favicon.svg" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header class="header">
-    <img src="./img/marcaMarca.svg" alt="Logo" width="104" height="38">
+    <img src="./img/GustavoMendes.svg" alt="Logo" width="358" height="38">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
