--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li>gustavormendess@email.com</li>
+        <li>gustavormendess@gmail.com</li>
         <li>+55 47 9244-2004</li>
         <li><a href="https://www.linkedin.com/in/gustavormendess/" target="_blank">Linkedin</a></li>
       </ul>
