--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li>gustavormendess@gmail.com</li>
-        <li>+55 47 9244-2004</li>
+        <li><a href="mailto:gustavormendess@gmail.com?subject=Em relação à seu portifólio" target="_blank">gustavormendess@gmail.com</a></li>
+        <li><a href="https://wa.me/554792442004" target="_blank">+55 47 9244-2004</a></li>
         <li><a href="https://www.linkedin.com/in/gustavormendess/" target="_blank">Linkedin</a></li>
       </ul>
       <p class="footer-copy">Mendes. Alguns direitos reservados.</p>
