--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li><a href="mailto:gustavormendess@gmail.com?body=Oi20%Gustavo!" target="_blank">gustavormendess@gmail.com</a></li>
+        <li><a href="mailto:gustavormendess@gmail.com" target="_blank">gustavormendess@gmail.com</a></li>
         <li><a href="https://wa.me/554792442004?text=Olá%20Gustavo!%20Vim%20do%20seu%20portifólio." target="_blank">+55 47 9244-2004</a></li>
         <li><a href="https://www.linkedin.com/in/gustavormendess/" target="_blank">Linkedin</a></li>
       </ul>
