update footer text

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <li><a href="https://wa.me/554792442004?text=Olá%20Gustavo!%20Vim%20do%20seu%20portifólio." target="_blank">+55 47 9244-2004</a></li>
         <li><a href="https://www.linkedin.com/in/gustavormendess/" target="_blank">Linkedin</a></li>
       </ul>
-      <p class="footer-copy">Mendes. Alguns direitos reservados.</p>
+      <p class="footer-copy">Alguns direitos reservados.</p>
     </div>
   </footer>
 
