--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/foto-de-perfil-4 1.jpg" alt="Foto de perfil" width="360" height="520">
+    <img src="./img/foto-de-perfil-4.jpg" alt="Foto de perfil" width="360" height="520">
     <div>
       <h1>Desenvolvedor<br>Full Stack &<br>UX/UI Designer</h1>
       <p>Localizado em Porto Velho📍</p>
